--- a/Assignments/maggieoshea_TSA_A04_Sp23.Rmd
+++ b/Assignments/maggieoshea_TSA_A04_Sp23.Rmd
@@ -2,7 +2,7 @@
 ---
 title: "ENV 790.30 - Time Series Analysis for Energy Data | Spring 2023"
 subtitle: "Assignment 4 - Due date 02/17/23"
-author: "Student Name"
+author: "Maggie O'Shea"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -21,7 +21,7 @@ When you have completed the assignment, **Knit** the text and code into a single
 
 R packages needed for this assignment: "xlsx" or "readxl", "ggplot2", "forecast","tseries", and "Kendall". Install these packages, if you haven't done yet. Do not forget to load them before running your script, since they are NOT default packages.\\
 
-```{r}
+```{r, warnings = FALSE, message=FALSE}
 #Load/install required package here
 library(lubridate)
 library(ggplot2)
@@ -39,12 +39,13 @@ library(dplyr)
 Consider the same data you used for A3 from the spreadsheet "Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source.xlsx". The data comes from the US Energy Information and Administration and corresponds to the December 2022 Monthly Energy Review. For this assignment you will work only with the column "Total Renewable Energy Production". 
 
 
-```{r}
+```{r warning = FALSE, message = FALSE}
 #Importing data set - using xlsx package
-install.packages("readxl")
+#Note: xlsx was resulting in an error due to the java version I have on my machine. 
+#I thus used readxl instead. 
+#install.packages("readxl")
 library(readxl)
-library(readxl)
-energy_data<- read_excel("Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source.xlsx", skip = 12, sheet = "Monthly Data", col_names=FALSE)
+energy_data<- read_excel("./Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source.xlsx", skip = 12, sheet = "Monthly Data", col_names=FALSE)
 read_col_names <- read_xlsx(path="Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source.xlsx",skip = 10,n_max = 1, sheet="Monthly Data",col_names=FALSE) 
 colnames(energy_data) <- read_col_names
 
@@ -64,7 +65,7 @@ Difference the "Total Renewable Energy Production" series using function diff().
 * *lag* integer indicating with lag to use;
 * *differences* integer indicating how many times series should be differenced.
 
-Try differencing at lag 1 only once, i.e., make `lag=1` and `differences=1`. Plot the differenced series Do the series still seem to have trend?
+Try differencing at lag 1 only once, i.e., make `lag=1` and `differences=1`. Plot the differenced series. Do the series still seem to have trend?
 
 ```{r}
 diffseries <- diff(energy_clean$`Total Renewable Energy Production`, lag = 1, differences = 1)
@@ -124,7 +125,6 @@ ggplot(fulldataframe, aes(x=Month))+
   guides(fill = guide_legend(title = "Series"))+
   labs(title="Total Renewable Energy Production 1973-2023: 
   Original Data, Detrended, and Differenced Series")
-  
 
 ```
 
@@ -142,7 +142,7 @@ par(mfrow = c(1,3))
 ```
 
 ### Q5 Answer: 
-The differenced series appears to have removed the trend and shows instead correlations that very from positive to negative and a few high correlations at lag 12 and 24. In contrast, the detrended series still has a trend, though does show more seasonality than the original ACF. Thus, the differenced series was more effective in eliminating the trend altogether. 
+The differenced series appears to have removed the trend and shows instead correlations that vary from positive to negative and a few high correlations at lag 12 and 24. In contrast, the detrended series still has a trend, though does show more seasonality than the original ACF. Thus, the differenced series was more effective in eliminating the trend altogether. 
 
 ### Q6
 Compute the Seasonal Mann-Kendall and ADF Test for the original "Total Renewable Energy Production" series. Ask R to print the results. Interpret the results for both test. Whats the conclusion from the Seasonal Mann Kendall test? What's the conclusion for the ADF test? Do they match what you observed in Q2? Recall that having a unit root means the series has a stochastic trend. And when a series has stochastic trend we need to use a different procedure to remove the trend.
@@ -191,4 +191,6 @@ print(sp_rho)
 
 
 #### Q8 Answer: 
-The results from the ADF test on the yearly means of renewable energy production is the opposite of the earlier test (p = 0.99). This suggests that we cannot reject the null hypothesis and thus there is a trend. This aligns more with the ACF plot which shows a trend, and thus suggests that the seasonality in the data was impacting the results of the original ADF. The results of the Mann Kendall test align with the seasonal mann kendall results (p<0.01) and suggest, as the SMKtest suggested, that there is a trend. The spearman's rank correlation had a p-value of <0.01 which suggests that the correlation is not zero and there is, therefore, a statistically significant correlation between renewable energy production and time. 
+The results from the ADF test on the yearly means of renewable energy production shows that, with a p-value of 0.99, we cannot reject the null and thus provides statistical evidence that the series is not stationary. This is the opposite of the Q6 ADF test which had a p-value of <0.01. The results of the Mann Kendall test align with the seasonal mann kendall results (p<0.01) and suggest, as the Q6 SMKtest suggested, that there is a trend. The spearman's rank correlation had a p-value of <0.01 which suggests that the correlation is not zero and there is, therefore, a statistically significant correlation between renewable energy production and time. 
+
+
