--- a/Assignments/TSA_A05_Sp23.Rmd
+++ b/Assignments/TSA_A05_Sp23.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "ENV 790.30 - Time Series Analysis for Energy Data | Spring 2023"
 subtitle: "Assignment 5 - Due date 02/27/23"
-author: "Student Name"
+author: "Maggie O'Shea"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -22,7 +22,7 @@ R packages needed for this assignment: "xlsx" or "readxl", "ggplot2", "forecast"
 
 ```{r}
 #Load/install required package here
-library(xlsx)
+library(readxl)
 library(forecast)
 library(tseries)
 library(ggplot2)
@@ -39,12 +39,15 @@ Consider the same data you used for A04 from the spreadsheet "Table_10.1_Renewab
 
 ```{r}
 #Importing data set - using xlsx package
-energy_data <- read.xlsx(file="./Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source.xlsx",header=FALSE,startRow = 13,sheetIndex=1) #startRow is equivalent to skip on read.table
+
+energy_data<- read_excel("./Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source.xlsx", skip = 12, sheet = 1, col_names=FALSE)
+#Note: Package xlsx does not work because of the java on my computer. I used readxl, which requires slightly different code. 
+
 
 #Now let's extract the column names from row 11 only
-read_col_names <- read.xlsx(file="./Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source.xlsx",header=FALSE,startRow = 11,endRow=11,sheetIndex=1)
-
+read_col_names <- read_xlsx(path="Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source.xlsx",skip = 10,n_max = 1, sheet="Monthly Data",col_names=FALSE) 
 colnames(energy_data) <- read_col_names
+
 head(energy_data)
 
 nobs=nrow(energy_data)
