--- a/Lessons/M5_ARIMAmodels_Part1.Rmd
+++ b/Lessons/M5_ARIMAmodels_Part1.Rmd
@@ -104,9 +104,10 @@ par(mar=c(3,3,3,0)) #changing plot window dimensions
 
 ACF_Plot <- Acf(electricity_price_processed$Residential, lag = 40, 
                 main = "ACF Residential Electricity Price")
+ # this looks like an AR because there is slow decay, showing the memory 
 PACF_Plot <- Pacf(electricity_price_processed$Residential, lag = 40, 
                   main = "PACF Residential Electricity Price")
-
+#Strong AR model which you can see because the first lag has an almost 1 correlation 
 ```
 
 
@@ -130,10 +131,14 @@ The ACF and PACF from the seasonal adjusted series will help you specify compone
 
 #Creating non-seasonal residential price time series
 deseasonal_residential_price <- seasadj(decompose_residential_price)  
+#This takes your original series and subtracts your seasonal component 
+    #It only works on decompose object 
+
 
 df_residential <- data.frame( Month = electricity_price_processed$Month,
                              Residential = electricity_price_processed$Residential,
                              NonSeasonalResidential = as.numeric(deseasonal_residential_price))
+
 
 ggplot(df_residential, aes(x=Month)) +
       geom_line(aes(x=Month,y=Residential),color="black") +
@@ -166,6 +171,7 @@ Always check for stationarity before fitting ARIMA models. This will help specif
 #Run ADF
 #adf.test(deseasonal_price,alternative="stationary")
 print((adf.test(deseasonal_residential_price,alternative="stationary")))
+#Reject so it is not stationary, and it has a unit root --> unit root means we need to difference (in addition to seasonal adjusting) 
 
 #Note that p-value greater then 0.05 so we accept H0. Data has stochastic trend
 #Lets difference the series to remove the trend.
@@ -187,7 +193,7 @@ par(mar=c(3,3,3,0));par(mfrow=c(1,3))
 Acf(df_residential_full$Residential,lag.max=40,main="Residential",ylim=c(-.2,1))
 Acf(df_residential_full$NonSeasonalResidential,lag.max=40,main="Non Sesonal Residential",ylim=c(-.2,1))
 Acf(df_residential_full$ResidentialDiff,lag.max=40,main="Diff NonSeas Residential",ylim=c(-.2,1))
-
+##No more unit root, you can see because the ACF no longer has the first lag so highly correlated
 
 #Comparing PACFs
 par(mar=c(3,3,3,0));par(mfrow=c(1,3))
@@ -211,6 +217,7 @@ Some important arguments for Arima() are:
 
 #Remember the order d=1 will perform the differencing, 
 #so lets try ARIMA(1,1,1) on the non-seasonal residential data before differencing
+#drift says even after differencing the mean may not be exactly zero so take that into account
 Model_111 <- Arima(deseasonal_residential_price,order=c(1,1,1),include.drift=TRUE)
 print(Model_111)
 compare_aic <- data.frame(Model_111$aic)
@@ -220,6 +227,7 @@ par(mar=c(3,3,3,0));par(mfrow=c(1,3))
 ts.plot(Model_111$residuals)
 Acf(Model_111$residuals,lag.max=40)
 Pacf(Model_111$residuals,lag.max=40)
+## Best model is PACF and ACF has all correlations within the blue lines 
 
 #Now let's try ARIMA(0,1,1)
 Model_011 <- Arima(deseasonal_residential_price,order=c(0,1,1),include.drift=TRUE)
@@ -283,7 +291,7 @@ print(compare_aic)
 
 ```
 
-## What happens if you don't differenciate?
+## What happens if you don't difference?
 
 If you don't differenciate the series, i.e., if you input the non-stationarity series, you should specify d = 1. Otherwise, Arima will be fitting a model to a non-stationary series. Note the difference between AIC for Model_101 and Model_101_diff
 
