--- a/Lessons/M6_SeasonalARIMA.Rmd
+++ b/Lessons/M6_SeasonalARIMA.Rmd
@@ -219,7 +219,7 @@ par(mfrow=c(1,3))
 ts.plot(SARIMA_autofit$residuals)
 Acf(SARIMA_autofit$residuals,lag.max=40)
 Pacf(SARIMA_autofit$residuals,lag.max=40)
-
+#AIC: -178.08
 
 ```
 
@@ -238,8 +238,12 @@ ts.plot(ARIMA_autofit$residuals)
 Acf(ARIMA_autofit$residuals,lag.max=40)
 Pacf(ARIMA_autofit$residuals,lag.max=40)
 
-
+#AI= -234.11
 ```
 
 ## Discussion: Which one to do? ARIMA or SARIMA?
+
+Can't compare AICs because the models are too different, though usually seasonal ARIMA would be better because it works for a constant and non-constant seasonal component 
+  - the AIC seems lower for the non-seasonal ARIMA because it's not accounting for the errors in seasonal 
+      - the AIC for non-seasonal model says how the model is performing on th *non-seasonal* pieces **only** so cannot be compared to model that is looking at seasonal elements as well 
 
